******

    gnome-mplayer is currently in a heavy state of changes 
    
    Known broken items
    
    Website Playback
    DVD w/o menu playback
    TV playback
    
    Details
    Audio Meter
    
    Keyboard shortcuts
    

******


Development
    Make audio track and subtitle selection menus work
    Activate/Deactivate subtitle visibility,delay,size menus based on if subs exist or not
    Fix resize issues with normal, double and half sizes
    Move menu updates from resize_window, make the gui change based on media state
    Move GUI updates from set_gui_state, make the gui change based on media state
    Fix state tracking
    Fix DVD menu selection
    Make playlists work
    Make enhanced subtitles work
    Add many attributes to gmtk_media_player
    Replace send_command with dummy function, until conversion is complete
    Replace mplayer_shutdown with gmtk version
    Add more attributes and methods to libgmtk - gmtk_media_player, still more to add
    Remove mute and other values from idledata
    Remove ThreadData type
    Remove thread.[c|h]
    Start conversion to libgmtk - gmtk_media_player
    libgmtk - gmtk_media_player, convert from GtkFixed layout to GtkAlignment layout, allows window to shrink in GTK3
    Allow code to compile when --enable-gtk3 is used
    More configure macros
    Add --enable-gtk3 to configure, code does not compile yet in this mode
    libgmtk - gtk3 prep
    Convert gtk_menu_append to gtk_menu_shell_append
1.0.3
    libgmtk - change GtkObjectClass to GObjectClass
    Cleanup some compiler warnings
    Updated Japanese translation
    Fix black screen issue when loading DVD
    Fix potential NULL pointer referenced Issue #503
    Make DVDNAV menu selection with mouse work properly
    Clean up shell script warning in configure
    Make configure option --with-gconf=yes override use of gsettings
    Updated Polish translation
    Clean up some compiler warnings
    Run autoreconf with new autoconf tools